# retail-data-warehouse-duckdb

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: DOWNLOAD_HERE.txt
notebooks/: retail_analytics.ipynb
